<?xml version="1.0"?>
<package>
  <name>ros_threeseg</name>
  <version>0.0.1</version>
  <description>The threeseg package</description>

  <maintainer email="hamzamerzic@gmail.com">Hamza Merzic</maintainer>
  <author email="hamzamerzic@gmail.com">Hamza Merzic</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export></export>
</package>